WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314093
Animated GIF freezes when presentation attributes are changed on SVG image referenced by use element
https://bugs.webkit.org/show_bug.cgi?id=314093
Summary
Animated GIF freezes when presentation attributes are changed on SVG image re...
Taher
Reported
2026-05-05 08:34:20 PDT
ssia
Attachments
Add attachment
proposed patch, testcase, etc.
Taher
Comment 1
2026-05-05 08:34:35 PDT
rdar://96837306
Taher
Comment 2
2026-05-05 08:37:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64180
EWS
Comment 3
2026-05-19 17:25:50 PDT
Committed
313531@main
(0eadba6f98dc): <
https://commits.webkit.org/313531@main
> Reviewed commits have been landed. Closing PR #64180 and removing active labels.
Ahmad Saleem
Comment 4
2026-05-19 17:38:32 PDT
***
Bug 314092
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug